Moved frc-ballistic-solver to the root

--- a/robot/pyproject.toml
+++ b/robot/pyproject.toml
@@ -10,6 +10,5 @@ components = [
     # "xrp",
 ]
 requires = [
-    "numpy",
-    "frctools -e git+https://github.com/frc3117/frc-3117-tools-python.git@c9cfd5b09859e9e2f3c500491e697eb3fdb3af1e#egg=frctools&subdirectory=../../../robot/frc-3117-tools-python"
+    "numpy"
 ]
