Adding Roborio Wheel for frc-ballistic-solver

--- a/robot/requirements.txt
+++ b/robot/requirements.txt
@@ -1,4 +1,10 @@
--e ./frc-3117-tools-python
+--find-links=whl
+--prefer-binary
+
+#-e ./frc-3117-tools-python
 robotpy==2026.1.1
 robotpy-rev==2026.0.1
 photonlibpy==2026.1.1rc3
+
+# Wheels
+frc_ballistic_solver
