--- a/.gitignore
+++ b/.gitignore
@@ -151,7 +151,7 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
-whl/
+#whl/
 
 # Robotpy sim
 robot/simgui-window.json
